# WhatsApp-wrapped

./: LICENSE  README.md  app.py  fly.toml  pyproject.toml  summarize_chat.py
app/: main.py  summarize_chat.py  wrapped_image.py
app/application/: services.py
app/domain/: conversation.py  domain_error.py  export_format.py  models.py  participant.py
app/infrastructure/: parser.py
app/templates/: index.html
application/: services.py
infrastructure/: parser.py
tests/: test_parser.py
